2010-06-09  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/fms.py:
	Send reset always before starting streaming

2010-05-19  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: xqueralt

	* flumotion/component/producers/fms/fms.py:
	Prevent FMLE from sending too many audio packets downstream
	to prevent synchronization issues.

2010-03-26  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Julien LeGoff

	* flumotion/component/producers/fms/fms.py:
	When setting the new stream header from the backup we shouldn't try to
	start streaming before sending the present buffer normaly.
	Add comments about the new behaviour.

2010-03-25  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	Log the exception message, not just the fact that an exception
	occurred.

2010-03-23  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/fms.py:
	Fix a bug when the video tag containing the sequence header comes before
	the new metadata and the codec didn't change. The change was not
	detected till the metadata came and the sequece header was dropped.
	Consequently, all the following tags were dropped because there were no
	sequence header.
	Fixes #8604

2010-02-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/fms.py:
	Handle better when two or more clients try to publish at the same time.

2010-02-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/component/producers/fms/fms.py:
	Enable the component to accept reconnections from the encoder:
	  - When there are network problems
	  - When the encoder is stopped/restarted
	  - When the user changes the configuration of the encoded stream

2010-02-15  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* env.in:
	Add flumotion scripts to the path in env
